examples/negative/type_errors/L2/9_var_bool_high_lim_for.ob
MODULE VarBoolHiLimFor;

VAR x,y: INTEGER;
    l: BOOLEAN;

BEGIN
  x := 42;
  l := TRUE;
  FOR y := 0 TO l DO
    x := x + 1
  END
END VarBoolHiLimFor.
